<resources>
    <string name="up_current_id">eu.alfred.personalization_manager.controller.CURRENT_UP_ID</string>
    <string name="up_current_email">eu.alfred.personalization_manager.controller.CURRENT_UP_EMAIL</string>
    <string name="up_current_password">eu.alfred.personalization_manager.controller.CURRENT_UP_PASSWORD</string>
    <string name="up_current_userid">eu.alfred.personalization_manager.controller.CURRENT_UP_USERID</string>
    <string name="app_name">ALFRED Profile</string>
    <string name="up_first_name_hint">John…</string>
    <string name="up_first_name_text">First name</string>
    <string name="up_middle_name_text">Middle name</string>
    <string name="up_middle_name_hint">Larry…</string>
    <string name="up_save_button_text">Save</string>
    <string name="up_id_text">User Profile ID</string>
    <string name="up_id_hint">Auto generated…</string>
    <string name="up_last_name_text">Last name</string>
    <string name="up_last_name_hint">Smith…</string>
    <string name="up_preferred_name_text">Preferred name</string>
    <string name="up_preferred_name_hint">Johnny…</string>
    <string name="up_gender_text">Gender</string>
    <string name="up_gender_male_text">Male</string>
    <string name="up_gender_female_text">Female</string>
    <string name="up_date_birth_text">Date of birth</string>
    <string name="up_phone_text">Phone</string>
    <string name="up_mobile_phone_text">Mobile phone</string>
    <string name="up_phone_hint">+31 555 00 11 XX</string>
    <string name="up_mobile_phone_hint">+31 955 00 11 XX</string>
    <string name="up_username_text">User Name</string>
    <string name="up_username_hint">yourcontact@alfreduser.com</string>
    <string name="up_email_text">e-mail</string>
    <string name="up_email_hint">yourcontact@mail.com</string>
    <string name="action_save_title">Save</string>
    <string name="action_delete_profile_title">Delete profile?</string>
    <string name="action_delete_contact_title">Delete contact?</string>
    <string name="action_new_profile_title">Create</string>
    <string name="activity_name">Your Profile</string>
    <string name="up_contact_street">Street</string>
    <string name="up_contact_street_hint">Av. United Nations</string>
    <string name="up_contact_number">Number</string>
    <string name="up_contact_number_hint">45, 6B, XII…</string>
    <string name="up_contact_postalCode">Postal code</string>
    <string name="up_contact_postalCode_hint">74300</string>
    <string name="up_contact_city">City</string>
    <string name="up_contact_city_hint">Utrecht</string>
    <string name="up_contact_state">State/Province</string>
    <string name="up_contact_state_hint">Utrecht</string>
    <string name="up_contact_country">Country</string>
    <string name="up_contact_country_hint">The Netherlands</string>
    <string name="up_status_citizenship_text">Citizenship</string>
    <string name="up_citizenship_hint">British, Dutch, French, Swedish...</string>
    <string name="up_nationality_hint">Spanish, German, Irish...</string>
    <string name="up_social_security_number_hint">8800–123–0000000</string>
    <string name="up_health_insurance_hint">Partial, all assured…</string>
    <string name="up_nationality_text">Nationality</string>
    <string name="up_language_text">Language</string>
    <string name="up_social_security_number_text">Social Security Number</string>
    <string name="up_marital_status_text">Marital status</string>
    <string name="up_education_level_text">Educational level</string>
    <string name="up_employment_status_text">Employment status</string>
    <string name="up_living_situation_text">Living situation</string>
    <string name="up_health_insurance_text">Health insurance</string>
    <string name="up_mobility_level_text">Mobility level</string>
    <string name="select_one">Select one</string>
    <string name="up_profession_text">Profession</string>
    <string name="up_profession_insurance_hint">Teacher, engineer, lawyer…</string>
    <string name="up_interests_text">Interests</string>
    <string name="up_interests_hint">Music, Dancing, Walking…</string>
    <string name="up_health_id_text">ID</string>
    <string name="up_health_id_hint">Auto…</string>
    <string name="up_health_userID_text">userID</string>
    <string name="up_health_userID_hint">Provided…</string>
    <string name="up_health_bloodType_text">Blood type</string>
    <string name="up_health_chronicalConditions_text">Chronical Conditions</string>
    <string name="up_health_chronicalConditions_hint">Asthma, diabetes, glaucoma…</string>
    <string name="up_health_medicationsTaking_text">Medications taking</string>
    <string name="up_health_medicationsTaking_hint">Ibuprofen, Phenergan, Ambien CR….</string>
    <string name="up_health_abilityLevel_text">Mod. Rankin Scale</string>
    <string name="up_health_knownAllergies_text">Known allergies</string>
    <string name="up_health_knownAllergies_hint">Pollen, mites, apricots…</string>
    <string name="up_health_notableMedicalIncidents_text">Notable medication incidents</string>
    <string name="up_health_notableMedicalIncidents_hint">Stroke, seizure, broken hip…</string>
    <string name="up_health_surgeries_text">Surgeries</string>
    <string name="up_health_surgeries_hint">Bursectomy, angioplasty, arthrotomy…</string>
    <string name="up_health_vaccinations_text">Vaccinations</string>
    <string name="up_health_vaccinations_hint">Hepatitis A, polio, rabies…</string>
    <string name="up_health_dietaryRequirements_text">Dietary Requirements</string>
    <string name="up_health_dietaryRequirements_hint">Low sodium, gluten intolerant, lacto vegetarian…</string>
    <string name="up_health_pulseAtRest_text">Pulse at rest</string>
    <string name="up_health_pulseAtRest_hint">80</string>
    <string name="up_health_breathingRateAtRest_text">Breathing rate at rest</string>
    <string name="up_health_breathingRateAtRest_hint">40</string>
    <string name="up_health_bodyTemperatureAtRest_text">Body temperature at rest</string>
    <string name="up_health_bodyTemperatureAtRest_hint">36ºC</string>
    <string name="up_health_selfRatedHealth_text">Self-rated Health</string>
    <string name="up_health_selfRatedHealth_hint">Normal…</string>
    <string name="up_health_visionAcuityScore_text">Vision acuity Score</string>
    <string name="up_health_visionAcuityScore_hint">3</string>
    <string name="up_health_hearingAcuityScore_text">Hearing acuity score</string>
    <string name="up_health_hearingAcuityScore_hint">4</string>
    <string name="up_health_lifestyleHealthRelated_text">Lifestyle health related</string>
    <string name="up_health_lifestyleHealthRelated_hint">Smoker, alcohol, sedentarism…</string>
    <string name="up_health_weight_text">Weight</string>
    <string name="up_health_weight_hint">72 kg</string>
    <string name="up_health_height_text">Height</string>
    <string name="up_health_height_hint">172 cm</string>
    <string name="up_health_painLevel_text">Pain level</string>
    <string name="up_health_painLevel_hint">Middle, low, sporadic…</string>
    <string name="up_health_functionalReachScore_text">Functional Reach Score</string>
    <string name="up_health_functionalReachScore_hint">Risk of fall off…</string>
    <string name="up_health_fiveXSitToStandTestScore_text">Five X sit to stand test score</string>
    <string name="up_health_fiveXSitToStandTestScore_hint">Normal…</string>
    <string name="up_health_timedUpAndGoTestScore_text">Time up and go test score</string>
    <string name="up_health_timedUpAndGoTestScore_hint">Normal…</string>
    <string name="up_health_manualDynamometerGripStrengthScore_hint">Normal…</string>
    <string name="up_health_handStrengthLevel_hint">Normal…</string>
    <string name="up_health_sixMinuteWalkTestScore_hint">Normal…</string>
    <string name="up_health_muscleGrading_hint">Normal…</string>
    <string name="up_health_dailyLivingActivitiesScore_hint">Normal…</string>
    <string name="up_health_cognitionLevel_hint">Normal…</string>
    <string name="up_health_societyParticipationScore_hint">Normal…</string>
    <string name="up_health_physicalActivityLevel_hint">Normal…</string>
    <string name="up_health_fallRiskScore_hint">Normal…</string>
    <string name="up_health_rangeOfMotionScore_hint">Normal…</string>
    <string name="up_health_manualDynamometerGripStrengthScore_text">M. Dyn. Grip Strength Score</string>
    <string name="up_health_handStrengthLevel_text">Hand Strength Level</string>
    <string name="up_health_sixMinuteWalkTestScore_text">6 min Walk Test Score</string>
    <string name="up_health_muscleGrading_text">Muscle Grading</string>
    <string name="up_health_dailyLivingActivitiesScore_text">Daily Living Activities Score</string>
    <string name="up_health_cognitionLevel_text">Cognition Level</string>
    <string name="up_health_societyParticipationScore_text">Society Participation Score</string>
    <string name="up_health_physicalActivityLevel_text">Physical ActivityLevel</string>
    <string name="up_health_fallRiskScore_text">Fall Risk Score</string>
    <string name="up_health_rangeOfMotionScore_text">Range Of Motion Score</string>
    <string name="up_contact_postal_address">Postal Address</string>
    <string name="edit_contact_activity_name">Edit Contact</string>
    <string name="edit_new_contact_activity_name">New Contact</string>
    <string name="tab_personal_title">Personal</string>
    <string name="tab_contacts_title">Contacts</string>
    <string name="tab_health_title">Health</string>
    <string name="tab_personal_header_other">More info</string>
    <string name="tab_personal_header_postal_address">Postal Address</string>
    <string name="tab_personal_header_residential_address">Residential Address</string>
    <string name="tab_personal_header_contact_info">Contact info</string>
    <string name="contact_header_general">General</string>
    <string name="up_relation_text">Relation</string>
    <string name="contact_item_image_description">Contact icon</string>
    <string name="delete_contact_attempt_title">Delete contact?</string>
    <string name="delete_contact_attempt_message">This contact will be deleted.</string>
    <string name="exit_edited_contact_attempt_title">Do you want to exit?</string>
    <string name="exit_edited_contact_attempt_message">Changes will be lost.</string>
    <string name="delete_profile_attempt_title">Delete profile?</string>
    <string name="delete_profile_attempt_message">This will delete your entire profile.</string>
    <string name="action_logout_title">Logout</string>
    <string name="action_settings_title">Settings</string>
    <string name="pref_dev_options_title">Server options</string>
    <string name="pref_db_url_title">Users Database URL</string>
    <string name="pref_db_url_summary">Location of MongoDB for User Profiles</string>
    <string name="pref_db_url_default">http://80.86.83.34:8080/personalization-manager/services/databaseServices/users/</string>
    <string name="pref_user_id_title">Current User ID</string>
    <string name="pref_user_id_summary">Hexadecimal identifier</string>
    <string name="pref_activity_name">Settings</string>
    <string name="splash_bt_register">Register</string>
    <string name="splash_bt_login">Login</string>
    <string name="splash_tv_email">e-mail</string>
    <string name="splash_tv_password">password</string>
    <string name="splash_tv_email_hint">yourname@example.com</string>
    <string name="splash_tv_password_hint">Your password</string>
    <string name="splash_tv_name">Complete Name</string>
    <string name="splash_bt_no_account">No account?</string>
    <string name="splash_bt_already_registered">Already registered?</string>
    <string name="splash_tv_firstname_hint">First name</string>
    <string name="splash_tv_middlename_hint">Middle name</string>
    <string name="splash_tv_lastname_hint">Last name</string>
</resources>