<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".UserProfileActivity">
    <!--android:icon="@android:drawable/ic_menu_add"-->
    <item
        android:id="@+id/action_new_profile"
        android:icon="@drawable/ic_action_add_person"
        android:orderInCategory="45"
        app:showAsAction="ifRoom"
        android:title="@string/action_new_profile_title"
        android:visible="false" />
    <item
        android:id="@+id/action_save_profile"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"
        android:title="@string/action_save_title" />
    <item
        android:id="@+id/action_delete_profile"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="70"
        app:showAsAction="never"
        android:title="@string/action_delete_profile_title"
        android:visible="false" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="80"
        app:showAsAction="never"
        android:title="@string/action_settings_title" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_undo"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_logout_title" />

    <!--    <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            android:showAsAction="never" />-->
</menu>
