<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_create_contact"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"
        android:title="@string/action_new_profile_title" />
    <item
        android:id="@+id/action_edit_contact"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:title="@string/action_save_title" />
    <item
        android:id="@+id/action_delete_contact"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="70"
        app:showAsAction="ifRoom"
        android:title="@string/action_delete_contact_title" />
</menu>